add pagination, correct date format, add liquebase simple support

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>postgresql</artifactId>
             <version>9.1-901-1.jdbc4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
