--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 custom.folder.path=/static/images
+spring.datasource.url: ${JDBC_DATABASE_URL:}
